# propositional-parser

./: CMakeLists.txt  README.md
data/: invalido.txt  rules.txt  temp.txt  test.txt  valido.txt
include/: main.hpp  parser.hpp  propositional.hpp  reading.hpp  tokenizer.hpp
src/: main.cpp  parser.cpp  propositional.cpp  reading.cpp  tokenizer.cpp
